• update smart contract: add initialize function, include address as a parameter in deposit functions • add unit test • update front end

--- a/KOF-FE/src/components/styles.css
+++ b/KOF-FE/src/components/styles.css
@@ -45,10 +45,11 @@ button:hover {
   line-height: 16px;
 }
 
-#deposit-btn {
+#deposit-btn,
+#init-btn {
   background-color: #254cdd;
   color: white;
-  margin: 50px auto;
+  margin: 20px auto;
   display: block;
 }
 
